change back button at popup-arrange-viewing and nonuser mobile menu panel

--- a/app/blocks/arrange-viewing-form/arrange-viewing-form.pug
+++ b/app/blocks/arrange-viewing-form/arrange-viewing-form.pug
@@ -1,7 +1,7 @@
 mixin arrange-viewing-form()
   +b.FORM.arrange-viewing-form&attributes(attributes)
     +e.top
-      +e.A.back.nd-hide-md(href="#" data-fancybox-close)
+      +e.A.back.nd-hide-md.js-hide-timeblock(href="#")
         +e.back-icon
           +icon('nd-angle')
         +e.back-text Back
