--- a/app/layouts/redesign-default.pug
+++ b/app/layouts/redesign-default.pug
@@ -31,7 +31,7 @@ html(lang='en')
       +gradients-redesign
     if !noHeader
       +nd-header(isHost)(class=addClass)
-      +nd-user-menu-panel(isHost)
+      +nd-user-menu-panel(isHost, noUser)
       +nd-main-menu(menuData, isHost, noUser)
 
     +b.MAIN(class='nd-page' + pageCls)
