--- a/app/pages/sitemap/redesign-sitemap.pug
+++ b/app/pages/sitemap/redesign-sitemap.pug
@@ -5,7 +5,7 @@ block head
 
 block header
   - var headerClass = ' is-login'
-  - var isNoUser = true
+  - var isNoUser = false
   - var isMap = false
   - var host = 'manager'
   - var pageClass = ' nd-page_main'
