updates https://docs.google.com/document/d/1GEJTAnO5_FVuF3L0uNHua1Ov82tDdpmnj30FfWm8v40/edit step 2, 4, 8

--- a/app/blocks/box/box.scss
+++ b/app/blocks/box/box.scss
@@ -604,6 +604,11 @@
     background-color: $nd-color-daypass;
   }
 
+  &_size6 {
+    @include rule(width, (xl: 6px, xlg: 6, lg: 6, md: 6, sm: 6));
+    @include rule(height, (xl: 6px, xlg: 6, lg: 6, md: 6, sm: 6));
+  }
+
   &_size8 {
     width: 8px;
     height: 8px;
