--- a/app/blocks/button/nd-button.scss
+++ b/app/blocks/button/nd-button.scss
@@ -721,6 +721,14 @@
 
   &_black {
     background-color: $nd-color-basic;
+
+    #{$b} {
+      &__bg {
+        &::before {
+          background-image: linear-gradient(89.93deg, rgba(0, 0, 0, 0) .05%, #494949 51.04%, rgba(0, 0, 0, 0) 99.94%);
+        }
+      }
+    }
   }
 
   &.is-new::before {
