--- a/app/blocks/form-elements/nd-select.scss
+++ b/app/blocks/form-elements/nd-select.scss
@@ -1079,16 +1079,16 @@
     left: 0;
     z-index: 2;
     display: none;
-    background-image: $icon-cross;
+    background-image: $icon-arrow-back;
     background-repeat: no-repeat;
     background-position: 50% 50%;
-    background-size: 18px;
+    background-size: 22px 11px;
 
     @include screen('sm', max, 2) {
       display: block;
       width: pxtovw(56, 375);
       height: pxtovw(60, 375);
-      background-size: pxtovw(18, 375);
+      background-size: pxtovw(22, 375) pxtovw(11, 375);
     }
   }
 
