--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -93,6 +93,7 @@ include ../blocks/loader/loader
 include ../blocks/logo/logo
 include ../blocks/logo/nd-logo
 include ../blocks/long-arrow/long-arrow
+include ../blocks/map-popup/map-popup
 include ../blocks/map-switch/map-switch
 include ../blocks/map/map
 include ../blocks/media/media
