--- a/app/pages/host-account/host-account-messages.pug
+++ b/app/pages/host-account/host-account-messages.pug
@@ -25,7 +25,7 @@ block content
   +nd-content
     .nd-container
       +nd-content-aside
-        +sidebar.nd-sidebar.nd-hide-md
+        +sidebar-nosticky.nd-sidebar.nd-hide-md
           - var nav = getData('sideNavProfileHost.json')
           +nd-side-navigation(nav, 'Messages')._profile._profile_ha
 
