--- a/app/pages/deal-pass/deal-pass-contracts.pug
+++ b/app/pages/deal-pass/deal-pass-contracts.pug
@@ -32,7 +32,7 @@ block content
   +nd-content
     .nd-container
       +nd-content-aside
-        +sidebar.nd-sidebar.nd-hide-md
+        +sidebar-nosticky.nd-sidebar.nd-hide-md
           - var nav = getData('sideNavDealPassRent.json')
           +nd-side-navigation(nav, 'Contracts')
       +nd-content-main
