--- a/app/pages/guest-account/guest-account-viewings.pug
+++ b/app/pages/guest-account/guest-account-viewings.pug
@@ -27,7 +27,7 @@ block content
   +nd-content
     .nd-container
       +nd-content-aside
-        +sidebar.nd-sidebar.nd-hide-md
+        +sidebar-nosticky.nd-sidebar.nd-hide-md
           - var nav = getData('sideNavProfile.json')
           +nd-side-navigation(nav, 'My viewings')._profile
 
