--- a/app/pages/host-account/host-account-finances-statements.pug
+++ b/app/pages/host-account/host-account-finances-statements.pug
@@ -24,7 +24,7 @@ block content
   +nd-content
     .nd-container
       +nd-content-aside
-        +sidebar.nd-sidebar.nd-hide-md
+        +sidebar-nosticky.nd-sidebar.nd-hide-md
           - var nav = getData('sideNavProfileHost.json')
           +nd-side-navigation(nav, 'Finances')._profile._profile_ha
 
