--- a/app/pages/sitemap/redesign-sitemap.pug
+++ b/app/pages/sitemap/redesign-sitemap.pug
@@ -24,7 +24,7 @@ block content
   +nd-content
     .nd-container
       +nd-content-aside
-        +sidebar.nd-sidebar.nd-hide-md
+        +sidebar-nosticky.nd-sidebar.nd-hide-md
           +nd-side-navigation(nav, 'Spaces')._profile
 
       +nd-content-main
