--- a/app/blocks/form-elements/nd-select.scss
+++ b/app/blocks/form-elements/nd-select.scss
@@ -650,6 +650,10 @@
           padding: pxtovw(13, 375) pxtovw(10, 375) pxtovw(12, 375);
         }
 
+        &:not(:first-child) {
+          @include rule(margin-top, (sm: 4));
+        }
+
         [dir='rtl'] & {
           text-align: right;
         }
@@ -741,7 +745,7 @@
           border-radius: pxtovw(3, 375);
           margin-top: pxtovw(6, 375);
           max-height: pxtovw(200, 375);
-          padding: pxtovw(18, 375) pxtovw(5, 375) pxtovw(18, 375) pxtovw(5, 375);
+          padding: pxtovw(16, 375) pxtovw(5, 375) pxtovw(18, 375) pxtovw(5, 375);
         }
 
         .is-flipped & {
