--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -79,7 +79,9 @@ include ../blocks/hint/hint
 include ../blocks/icon/icon
 include ../blocks/indicator/indicator
 include ../blocks/info-editable/info-editable
+include ../blocks/info-notice/info-notice
 include ../blocks/info-notices/info-notices
+include ../blocks/info-notices/nd-info-notices
 include ../blocks/info-price/info-price
 include ../blocks/info-slide/info-slide
 include ../blocks/info-tooltip/info-tooltip
