--- a/app/pages/guest-account/guest-account-shorts.pug
+++ b/app/pages/guest-account/guest-account-shorts.pug
@@ -46,8 +46,9 @@ block content
                       +nd-box()(class=item.type.box + ' __box')
                       +e.name!=item.type.name
                     +nd-space-title()!=item.title
-                    +e.heart.is-active
-                      +icon('nd-favorite-full')
+                    +e.heart.js-heart.is-active
+                      +icon('nd-favorite-full').__heart-icon_full
+                      +icon('nd-favorite').__heart-icon_empty
                   +offer-slider(item.offers)._short.__offer-slider
 
 block panels
