--- a/app/pages/search/search-types.pug
+++ b/app/pages/search/search-types.pug
@@ -27,6 +27,9 @@ block content
                     +nd-box()(class=item.type.box + ' __box')
                     +e.name!=item.type.name
                   +nd-space-title()!=item.title
+                  +e.heart.js-heart
+                    +icon('nd-favorite-full').__heart-icon_full
+                    +icon('nd-favorite').__heart-icon_empty
                 +offer-slider(item.offers).__offer-slider
         +nd-pagination
       +nd-content-aside
