--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -223,6 +223,7 @@ $nd-button-hover-color: #0094ff;
 $nd-color-filter-border: #16181c;
 $nd-color-gray3: #ccd1d2;
 $nd-color-scroll: #eee;
+$nd-color-heart-gray: #bdbdbd;
 
 // ##########
 // Transitions
