--- a/app/blocks/avatar/avatar.scss
+++ b/app/blocks/avatar/avatar.scss
@@ -17,6 +17,23 @@
     border-radius: 50%;
   }
 
+  &__text {
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%;
+    transform: translate3d(0, -50%, 0);
+    text-align: center;
+    font-family: $font-stolzl;
+    font-weight: 500;
+    line-height: 1;
+    letter-spacing: -.02em;
+    color: currentColor;
+
+    @include rule(font-size, (xl: 17px, xlg: 17, lg: 17, md: 17, sm: 17));
+  }
+
   &_big {
     width: 110px;
     height: 110px;
@@ -54,6 +71,11 @@
     @include screen('sm') {
       width: 50px;
       height: 50px;
+    }
+
+    .nd & {
+      @include rule(width, (xl: 43px, xlg: 43, lg: 43, md: 43, sm: 50));
+      @include rule(height, (xl: 43px, xlg: 43, lg: 43, md: 43, sm: 50));
     }
   }
 
@@ -214,5 +236,10 @@
       width: pxtovw(244, 375);
       height: pxtovw(244, 375);
     }
+  }
+
+  &_blue {
+    background-color: $nd-color-main;
+    color: $nd-color-basic-light;
   }
 }
