--- a/app/blocks/offer-slider/offer-slider.scss
+++ b/app/blocks/offer-slider/offer-slider.scss
@@ -663,8 +663,7 @@
     pointer-events: auto;
     transition: background $ease-main;
     cursor: pointer;
-    fill: none;
-    stroke: rgba($nd-color-border4, .7);
+    fill: rgba($nd-color-border4, .7);
     transform-origin: 50% 50%;
     transform: translate3d(0, -50%, 0);
 
@@ -715,7 +714,7 @@
     }
 
     &:hover {
-      stroke: $nd-color-border4;
+      fill: $nd-color-border4;
     }
 
     &.swiper-button-disabled {
@@ -726,7 +725,6 @@
 
     svg {
       fill: inherit;
-      stroke: inherit;
       filter: drop-shadow(0 1px 0 rgba(0, 0, 0, .46));
       width: 13px;
       height: 38px;
