add head in host account spaces, fix z-indexes, add all icons in facility list

--- a/app/blocks/form-elements/nd-range.scss
+++ b/app/blocks/form-elements/nd-range.scss
@@ -225,6 +225,7 @@
     background-color: $nd-color-basic;
     box-sizing: border-box;
     transition: box-shadow $ease-main;
+    will-change: left;
     cursor: pointer;
 
     @include screen('xlg', max, 2) {
