--- a/app/blocks/info-notice/info-notice.scss
+++ b/app/blocks/info-notice/info-notice.scss
@@ -10,6 +10,7 @@
   color: $nd-color-gray-text;
   transition: border $ease-main, color $ease-main;
   border-bottom: 2px solid transparent;
+  cursor: pointer;
 
   @include rule(border-bottom-width, (xlg: 2, lg: 2, md: 2, sm: 2));
 
