--- a/app/components/search-panel/search-panel.scss
+++ b/app/components/search-panel/search-panel.scss
@@ -723,6 +723,7 @@
     @include screen('sm', max, 2) {
       margin: pxtovw(31, 375) 0 0;
       flex: none;
+      display: flex;
       width: 100%;
     }
 
