--- a/app/blocks/facility-list/facility-list.scss
+++ b/app/blocks/facility-list/facility-list.scss
@@ -7,6 +7,7 @@
   column-gap: 30px;
   color: $nd-color-basic;
   fill: currentColor;
+  column-fill: balance;
 
   @include screen('xlg', max, 2) {
     column-count: 3;
@@ -32,23 +33,8 @@
     align-items: center;
     column-span: none;
     transition: color $ease-main;
-    margin-bottom: 27px;
 
-    @include screen('xlg', max, 2) {
-      margin-bottom: pxtovw(27, 1660);
-    }
-
-    @include screen('lg', max, 2) {
-      margin-bottom: pxtovw(27, 1366);
-    }
-
-    @include screen('md', max, 2) {
-      margin-bottom: pxtovw(27, 960);
-    }
-
-    @include screen('sm', max, 2) {
-      margin-bottom: pxtovw(16, 375);
-    }
+    @include rule(margin-bottom, (xl: 26px, xlg: 26, lg: 26, md: 26, sm: 16));
 
     &.is-disabled {
       color: #bfc3c5;
@@ -56,37 +42,25 @@
   }
 
   &__icon {
-    display: inline-block;
+    position: relative;
+    display: block;
     font-size: 0;
     line-height: 0;
-    width: 23px;
-    height: 23px;
     flex: none;
 
-    @include screen('xlg', max, 2) {
-      width: pxtovw(23, 1660);
-      height: pxtovw(23, 1660);
-    }
+    @include rule(width, (xl: 23px, xlg: 23, lg: 23, md: 23, sm: 18));
+    @include rule(height, (xl: 23px, xlg: 23, lg: 23, md: 23, sm: 18));
 
-    @include screen('lg', max, 2) {
-      width: pxtovw(23, 1366);
-      height: pxtovw(23, 1366);
-    }
-
-    @include screen('md', max, 2) {
-      width: pxtovw(23, 960);
-      height: pxtovw(23, 960);
-    }
-
-    @include screen('sm', max, 2) {
-      width: pxtovw(18, 375);
-      height: pxtovw(18, 375);
-    }
-
-    svg {
+    svg, img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      display: block;
+      font-size: 0;
+      line-height: 0;
       fill: inherit;
       width: 100%;
-      max-height: 100%;
+      height: 100%;
     }
   }
 
@@ -114,23 +88,7 @@
     }
 
     &:not(:first-child) {
-      margin-left: 17px;
-
-      @include screen('xlg', max, 2) {
-        margin-left: pxtovw(17, 1660);
-      }
-
-      @include screen('lg', max, 2) {
-        margin-left: pxtovw(19, 1366);
-      }
-
-      @include screen('md', max, 2) {
-        margin-left: pxtovw(19, 960);
-      }
-
-      @include screen('sm', max, 2) {
-        margin-left: pxtovw(13, 375);
-      }
+      @include rule(margin-left, (xl: 17px, xlg: 17, lg: 19, md: 19, sm: 13));
     }
   }
 }
