shortlist title and fixes

--- a/app/blocks/section/nd-section.scss
+++ b/app/blocks/section/nd-section.scss
@@ -270,9 +270,8 @@
       width: auto;
       // max-width: 100%;
 
-      @include screen('md', max, 2) {
-        margin: 0;
-      }
+      @include rule(margin-right, (md: -50, sm: -20));
+      @include rule(margin-left, (md: 0, sm: -20));
     }
   }
 
