--- a/app/components/search-panel/search-panel.scss
+++ b/app/components/search-panel/search-panel.scss
@@ -773,6 +773,7 @@
       justify-content: flex-end;
       align-items: flex-start;
       order: 2;
+      flex-wrap: nowrap;
       flex: 1;
     }
   }
