--- a/app/pages/guest-account/guest-account-shorts.pug
+++ b/app/pages/guest-account/guest-account-shorts.pug
@@ -15,15 +15,17 @@ block header
 block content
   +nd-page-header._grid._grid_acc
     .nd-container
+      +e.title.nd-hide-from-sm Shortlist
       +nd-page-header-side
         +nd-link-icon('arrow5')._back.__back.nd-hide-from-sm Back
       +nd-page-header-main
         - var menuList = getData('sideNavProfile.json').menu;
         +e.dt-menu.nd-hide-md
           +nd-breadcrumbs([["Home", "#"], ["My account", "#"], ["Shortlist"]]).__breadcrumbs
-        +e.mb-menu.nd-hide-from-md
+        +e.mb-menu.nd-hide-from-md.nd-hide-sm
           +slider-navigation(menuList, 2, 'Shortlist')
-
+        +e.mb-menu.nd-hide-from-sm
+          +slider-navigation([{name: "Hot desks", href: "#"}, {name: "Fixed desks", href: "#"}, {name: "Meeting Rooms", href: "#"}, {name: "Private Offices", href: "#"}], 0, 'Hot desks')
   +nd-content
     .nd-container
       +nd-content-aside
