--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,4 +1,5 @@
 @import '../../node_modules/normalize.css/normalize.css';
+@import '../../node_modules/nouislider/distribute/nouislider.css';
 @import 'helpers/animations'; // анимации
 @import 'helpers/variables'; // Переменные
 @import 'helpers/mixins'; // Миксины
