--- a/app/blocks/form-elements/check-button.scss
+++ b/app/blocks/form-elements/check-button.scss
@@ -28,6 +28,8 @@
     transition: border $ease-main, color $ease-main, background $ease-main, transform $ease-main;
     white-space: nowrap;
     text-align: center;
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+    user-select: none;
 
     @include screen('xlg', max, 2) {
       border-radius: pxtovw(20, 1660);
