--- a/app/styles/helpers/_basics.scss
+++ b/app/styles/helpers/_basics.scss
@@ -142,7 +142,12 @@ input,
 button,
 select,
 textarea {
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   transition: color $ease-main, border-color $ease-main;
+}
+
+label {
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
 button {
