--- a/app/components/search-map/nd-search-map.scss
+++ b/app/components/search-map/nd-search-map.scss
@@ -143,4 +143,41 @@
       padding: pxtovw(20, 375);
     }
   }
+
+  &__slider {
+    overflow: hidden;
+
+    &.is-css-mode-slider {
+      @include screen('md', max, 2) {
+        width: 100vw;
+        margin: 0 pxtovw(-50, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin: 0 pxtovw(-20, 375);
+      }
+
+      .swiper-wrapper {
+        @include screen('md', max, 2) {
+          box-sizing: border-box;
+          scroll-padding: 0 pxtovw(50, 960);
+          padding: 0 pxtovw(50, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          scroll-padding: 0 pxtovw(20, 375);
+          padding: 0 pxtovw(20, 375);
+        }
+
+        &::after {
+          content: '';
+          display: block;
+
+          @include rule(min-width, (md: 50, sm: 20));
+          @include rule(width, (md: 50, sm: 20));
+          @include rule(height, (md: 20, sm: 20));
+        }
+      }
+    }
+  }
 }
